# secparser

./: .gitignore  .nvim-dap.lua  Cargo.toml  README.md  config.local.toml
examples/cik_lookup/: main.rs
examples/financial_statements/: main.rs
secparser/: Cargo.toml
secparser/src/: cik_lookup.rs  downloader.rs  lib.rs
secparser/src/financial_statements/: financial_statements_files.rs  mod.rs
secparser_core/: Cargo.toml
secparser_core/examples/cik_lookup/: main.rs
secparser_core/examples/financial_statements/: main.rs
secparser_core/src/: data_source.rs  downloader.rs  lib.rs  traits.rs  zip_csv_records.rs
secparser_core/src/cik_lookup/: data_source.rs  record.rs
secparser_core/src/company_facts/: mod.rs
secparser_core/src/financial_statement/: cal_record.rs  data_source.rs  dim_record.rs  mod.rs  pre_record.rs  record.rs  sub_record.rs  tag_record.rs  txt_record.rs
secparser_core/src/financial_statements/: cal_record.rs  data_source.rs  dim_record.rs  mod.rs  num_record.rs  pre_record.rs  record.rs  ren_record.rs  sub_record.rs  tag_record.rs  txt_record.rs
secparser_examples/: Cargo.toml
secparser_examples/examples/cik_lookup/: main.rs
secparser_examples/examples/financial_statements/: main.rs
secparser_ingest/: Cargo.toml
secparser_ingest/src/: cik_lookup.rs  db.rs  ingestible.rs  main.rs  progress_bar.rs
secparser_ingest/src/cik_lookup/: cik_lookup_ingest.rs  cik_lookup_ingestible.rs  cik_lookup_menu.rs  mod.rs
secparser_ingest/src/financial_statements/: fs_dim.rs  fs_ingest.rs  fs_menu.rs  fs_num.rs  fs_sub.rs  fs_tag.rs  ingest.rs  mod.rs  sub.rs  tag.rs
secparser_ingest/src/fs_10k/: fs_10k_ingestible.rs  fs_10k_menu.rs  mod.rs
secparser_macros/: Cargo.toml
secparser_macros/src/: fs_records_impl.rs  lib.rs
src/: csv_writer.rs  deserializer.rs  downloader.rs  lib.rs  local_config.rs  logger.rs  macros.rs  main.rs  parse_cik.rs  prompt.rs  traits.rs
src/cik_lookup/: data_source.rs  files.rs  mod.rs  record.rs  records.rs
src/financial_statement/: data_source.rs  mod.rs  record.rs  sub_record.rs  submission_record.rs  tag_record.rs
src/financial_statements/: files.rs  mod.rs  submission_records.rs
src/parse_cik/: mod.rs  parse_cik_lookup.rs  parse_company_tickers_exchange.rs
