[package]
name = "secparser"
version = "0.0.0"
edition = "2021"
description = "SEC Parser"
repository = "https://github.com/johnhuichen/secparser"
keywords = ["SEC"]
categories = ["finance", "command-line-utilities"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
colored = "2.1.0"
csv = "1.3.0"
derive_builder = "0.20.0"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = {version = "0.12.5", features = ["gzip", "deflate", "blocking"]}
retry = "2.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
zip = "2.1.6"
