[workspace]
members = ["secparser_core", "secparser_ingest"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
description = "SEC Parser"
repository = "https://github.com/johnhuichen/secparser"
keywords = ["SEC"]
categories = ["finance", "command-line-utilities"]
license = "Apache-2.0"

[workspace.dependencies]
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
snafu = "0.8.4"

secparser_core = { path = "./secparser_core" }
