[package]
name = "secparser"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
csv = "1.3.0"
derive_builder = { workspace = true }
headless_chrome = "1.0.12"
reqwest = {version = "0.12.5", features = ["gzip", "deflate"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
