[package]
name = "secparser_core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
derive_builder = "0.20.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
reqwest = {version = "0.12.5", features = ["gzip", "deflate", "blocking"]}
retry = "2.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
zip = "2.1.6"

anyhow = { workspace = true }
colored = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
secparser_macros = { workspace = true }
